@@ -12,13 +12,13 @@ nonAlphas = [ c for c in printables if not c.isalpha() ]
 
 print("Extract vowels, consonants, and special characters from this test string:")
 print("'" + test + "'")
-print()
+print('')
 
 print("Define grammar using normal results names")
 print("(only last matching symbol is saved)")
-vowels = oneOf(list("aeiouy"), caseless=True).setResultsName("vowels")
-cons = oneOf(list("bcdfghjklmnpqrstvwxz"), caseless=True).setResultsName("cons")
-other = oneOf(list(nonAlphas)).setResultsName("others")
+vowels = oneOf(list("aeiouy"), caseless=True)("vowels")
+cons = oneOf(list("bcdfghjklmnpqrstvwxz"), caseless=True)("cons")
+other = oneOf(nonAlphas)("others")
 letters = OneOrMore(cons | vowels | other) + StringEnd()
 
 results = letters.parseString(test)
@@ -26,27 +26,27 @@ print(results)
 print(results.vowels)
 print(results.cons)
 print(results.others)
-print()
+print('')
 
 
 print("Define grammar using results names, with listAllMatches=True")
 print("(all matching symbols are saved)")
-vowels = oneOf(list("aeiouy"), caseless=True).setResultsName("vowels",listAllMatches=True)
-cons = oneOf(list("bcdfghjklmnpqrstvwxz"), caseless=True).setResultsName("cons",listAllMatches=True)
-other = oneOf(list(nonAlphas)).setResultsName("others",listAllMatches=True)
+vowels = oneOf(list("aeiouy"), caseless=True)("vowels*")
+cons = oneOf(list("bcdfghjklmnpqrstvwxz"), caseless=True)("cons*")
+other = oneOf(nonAlphas)("others*")
 
-letters = OneOrMore(cons | vowels | other) + StringEnd()
+letters = OneOrMore(cons | vowels | other)
 
-results = letters.parseString(test)
+results = letters.parseString(test, parseAll=True)
 print(results)
-print(sorted(list(set(results))))
-print()
+print(sorted(set(results)))
+print('')
 print(results.vowels)
-print(sorted(list(set(results.vowels))))
-print()
+print(sorted(set(results.vowels)))
+print('')
 print(results.cons)
-print(sorted(list(set(results.cons))))
-print()
+print(sorted(set(results.cons)))
+print('')
 print(results.others)
-print(sorted(list(set(results.others))))
+print(sorted(set(results.others)))
 
